--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "grunt": "~0.4.1",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-jst": "~0.5.1",
+    "grunt-contrib-handlebars": "~0.6.0",
     "grunt-contrib-uglify": "~0.3.1",
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-contrib-cssmin": "~0.7.0",
