--- a/.jshintrc
+++ b/.jshintrc
@@ -7,7 +7,7 @@
     "curly": true,
     "eqeqeq": true,
     "immed": true,
-    "indent": 4,
+    "indent": 2,
     "latedef": true,
     "newcap": true,
     "noarg": true,
@@ -22,8 +22,8 @@
     "globals": {
         "Start": true,
         "start": true,
-        "_": false,
-        "Backbone": false,
+        "_": true,
+        "Backbone": true,
         "JST": false,
         "beforeEach": false,
         "describe": false,
