--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "backbone": "~1.1.0",
     "modernizr": "~2.7.1",
     "handlebars": "~1.3.0",
-    "oauth.io": "~0.1.7"
+    "oauth.io": "~0.1.7",
+    "bootstrap": "~3.1.1"
   },
   "devDependencies": {}
 }
