--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "start",
-  "version": "0.0.0",
+  "name": "peekr",
+  "version": "1.0.0",
   "dependencies": {
     "jquery": "~2.1.0",
     "underscore": "~1.6.0",
