--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "start",
+  "name": "peekr",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "express": "3.3.x",
+    "handlebars": "1.3.x"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-handlebars": "~0.6.0",
+    "grunt-contrib-handlebars": "~0.8.0",
     "grunt-contrib-uglify": "~0.3.1",
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-contrib-cssmin": "~0.7.0",
